<resources>
    <string name="app_name">PayEar</string>
    <string name="new_employee_added">New Employee added!</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="employee_removed">Employee removed!</string>
    <string name="are_you_sure_you_want_to_remove">Are you sure you want to remove %s from database?</string>
    <string name="last_name">Last Name:</string>
    <string name="first_name">First Name:</string>
    <string name="age">Age:</string>
    <string name="gender">Gender:</string>
    <string name="edit">edit</string>
    <string name="issue_occurred">Issue occurred. Try again!</string>
    <string name="employee_updated">Employee updated!</string>
    <string name="create">create</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="address">Address:</string>
</resources>